--- a/src/GUI/frmMedicoAPP.form
+++ b/src/GUI/frmMedicoAPP.form
@@ -66,7 +66,7 @@
                                       <Component id="txtNombreAPP" min="-2" pref="250" max="-2" attributes="0"/>
                                       <Component id="txtEdadAPP" min="-2" pref="250" max="-2" attributes="0"/>
                                       <Component id="txtDireccionAPP" min="-2" pref="250" max="-2" attributes="0"/>
-                                      <Component id="txtTelefono" min="-2" pref="250" max="-2" attributes="0"/>
+                                      <Component id="txtTelefonoAPP" min="-2" pref="250" max="-2" attributes="0"/>
                                       <Component id="txtAniosExpAPP" min="-2" pref="250" max="-2" attributes="0"/>
                                       <Component id="txtEspecialidadAPP" min="-2" pref="250" max="-2" attributes="0"/>
                                   </Group>
@@ -111,7 +111,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
-                      <Component id="txtTelefono" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="txtTelefonoAPP" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -200,7 +200,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtDireccionAPP">
         </Component>
-        <Component class="javax.swing.JTextField" name="txtTelefono">
+        <Component class="javax.swing.JTextField" name="txtTelefonoAPP">
         </Component>
         <Component class="javax.swing.JTextField" name="txtAniosExpAPP">
         </Component>
@@ -210,11 +210,17 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Cancelar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarAPPActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnGuardarAPP">
           <Properties>
             <Property name="text" type="java.lang.String" value="Guardar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGuardarAPPActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btmMostrarAPP">
           <Properties>
