--- a/src/GUI/frmPacienteAP.form
+++ b/src/GUI/frmPacienteAP.form
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <Properties>
+    <Property name="defaultCloseOperation" type="int" value="3"/>
+  </Properties>
+  <SyntheticProperties>
+    <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+  </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -59,7 +66,7 @@
                                       <Component id="txtNombreAPP" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
                                       <Component id="txtEdadAPP" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
                                       <Component id="txtDireccionAPP" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
-                                      <Component id="txtTelefono" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
+                                      <Component id="txtTelefonoAPP" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
                                       <Component id="txtNumHisAPP" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
                                       <Component id="txtEnfermedadAPP" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
                                   </Group>
@@ -104,7 +111,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
-                      <Component id="txtTelefono" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="txtTelefonoAPP" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -193,7 +200,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtDireccionAPP">
         </Component>
-        <Component class="javax.swing.JTextField" name="txtTelefono">
+        <Component class="javax.swing.JTextField" name="txtTelefonoAPP">
         </Component>
         <Component class="javax.swing.JTextField" name="txtNumHisAPP">
         </Component>
@@ -203,11 +210,17 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Cancelar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarAPPActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnGuardarAPP">
           <Properties>
             <Property name="text" type="java.lang.String" value="Guardar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGuardarAPPActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btmMostrarAPP">
           <Properties>
